--- a/Resources/layout/MasachOnGoing.xml
+++ b/Resources/layout/MasachOnGoing.xml
@@ -111,6 +111,25 @@
         android:text="time left for interval"
         android:textSize="20sp"
         android:fontFamily="monospace"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/redpouse2"
+            android:id="@+id/ivPouse"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/blueplay2"
+            android:id="@+id/ivPlay"/>
+
+        </LinearLayout>
 
     
     
