--- a/Resources/layout/Normal_Train.xml
+++ b/Resources/layout/Normal_Train.xml
@@ -36,7 +36,30 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:id="@+id/btnSkip"
+        android:text="next"
+        android:background="#B0C4DE"
         />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/redpouse2"
+            android:id="@+id/ivPouse"/>
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/blueplay2"
+            android:id="@+id/ivPlay"/>
+
+        </LinearLayout>
+    
 
 </LinearLayout>
