--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -1,7 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:background="#DCDCDC"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+>
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        android:text="run for your life"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="28sp"
+        android:textColor="#000000"
+        android:gravity="center_vertical"
+                />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@drawable/randommap"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="9dp"
+        android:orientation="horizontal">
+        <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/btrunning"
+        android:layout_weight="1"
+        android:text="running
+            "/>
+        <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/btexe"
+        android:layout_weight="1"
+        android:text="exercise
+            "/>
+        <Button
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/btoldStaff"
+        android:layout_weight="1"
+        android:text="recrnt workouts"/>
+        </LinearLayout>
+    
+</LinearLayout>
