--- a/Resources/layout/Recent_workouts_layout.xml
+++ b/Resources/layout/Recent_workouts_layout.xml
@@ -4,7 +4,10 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    
+    android:padding="5dp">
+
     <TextView
         android:layout_width="300dp"
         android:layout_height="60dp"
@@ -15,7 +18,73 @@
         android:textSize="28sp"
         android:textColor="#000000"
         android:gravity="center_vertical"
+        android:fontFamily="monospace"
                 />
+    <LinearLayout 
+     android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:gravity="center_vertical"    
+    android:background="#B0C4DE">
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="13dp"
+        android:id="@+id/ivimagetype"
+        android:background="@drawable/running"/>
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="running "
+        android:textSize="25dp"
+        android:layout_marginRight="30dp"
+        android:textColor="#000000"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12.11.2021"
+        android:textSize="25dp"
+        android:textColor="#000000"
+        />
+
+</LinearLayout>
+<LinearLayout 
+     android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:gravity="center_vertical" 
+    android:layout_marginTop="5dp"
+    android:background="#B0C4DE">
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="13dp"
+        android:id="@+id/ivimagetype"
+        android:background="@drawable/sport"/>
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="workout "
+        android:textSize="25dp"
+        android:layout_marginRight="30dp"
+        android:textColor="#000000"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="11.11.2021"
+        android:textSize="25dp"
+        android:textColor="#000000"
+        />
+
+</LinearLayout>
+    
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="435dp"
