--- a/Resources/layout/Workout_listview_layout.xml
+++ b/Resources/layout/Workout_listview_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:gravity="center_vertical"
@@ -9,24 +9,26 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/ivRunningSpeed"
-        android:layout_marginRight="13dp"
-        android:background="@drawable/slow"/>
+        android:layout_marginRight="7dp"
+        android:id="@+id/imageType"
+        android:background="@drawable/running"/>
     
     <TextView
-        android:layout_width="210dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="duration/distance:"
+        android:text="name"
         android:textSize="25dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="30dp"
         android:textColor="#000000"
+        android:fontFamily="monospace"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="type:"
+        android:text="date"
         android:textSize="25dp"
         android:textColor="#000000"
+        android:fontFamily="monospace"
         />
 
 </LinearLayout>
