--- a/Resources/layout/make_running_interval_layout.xml
+++ b/Resources/layout/make_running_interval_layout.xml
@@ -106,6 +106,11 @@
         android:gravity="center_horizontal"
         android:textSize="19sp"
      />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="save"/>
 
 
 </LinearLayout>
