--- a/Resources/layout/normal_interval_listview_layout.xml
+++ b/Resources/layout/normal_interval_listview_layout.xml
@@ -11,12 +11,12 @@
         android:layout_height="50dp"
         android:id="@+id/ivRunningSpeed"
         android:layout_marginRight="13dp"
-        android:background="@drawable/slow"/>
+        android:background="@drawable/normalexicon"/>
     
     <TextView
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:text="duration/distance:"
+        android:text="duration:"
         android:textSize="25dp"
         android:layout_marginLeft="20dp"
         android:textColor="#000000"
