--- a/Resources/layout/Normal_Train.xml
+++ b/Resources/layout/Normal_Train.xml
@@ -11,9 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:background="#B0C4DE"
-        android:text="on/off"
+        android:text="type"
         android:textSize="50sp"
         android:fontFamily="monospace"
+        android:textColor="#000000"
         android:id="@+id/tvTime"/>
     <TextView
             android:layout_marginTop="30sp"
@@ -23,6 +24,7 @@
             android:gravity="center_horizontal"
             android:text="6:46"
             android:textSize="35sp"
+        android:textColor="#000000"
             android:fontFamily="monospace"/>
     <TextView
             android:layout_width="wrap_content"
@@ -31,6 +33,7 @@
             android:textSize="20sp"
             android:fontFamily="monospace"
             android:layout_marginLeft="7.5sp"
+        android:textColor="#000000"
                 />
 
     <Button
