--- a/Resources/layout/Workout_listview_layout.xml
+++ b/Resources/layout/Workout_listview_layout.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/running"/>
     
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:text="name"
         android:textSize="25dp"
